# tibco-ems-sender-rs

./: Cargo.toml  README.md
samples/: tibco-ems-sender-rs.cmd
samples/input/: test1.txt  test2.txt
src/: main.rs
